# web-sysinfo

./: Cargo.toml
lib-tm/: Cargo.toml
lib-tm/src/: lib.rs  tm.rs
lib-tm/src/processes/: mod.rs
lib-tm/src/system_specs/: mod.rs
themes/mate-system-monitor/src/: index.html  index.js  libtm.js  systemInfo.js
tm-api/: Cargo.toml
tm-api/src/: main.rs  scopes.rs
tm-api/src/services/: mod.rs
tm-api/src/services/process/: get_all_processes.rs  mod.rs
tm-api/src/services/system_specs/: get_system_specs.rs  mod.rs
tm-api/src/state/: mod.rs
tm-api/src/types/: mod.rs
