[package]
name = "tm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
serde_json = { workspace = true }
lib-tm = { path = "../lib-tm" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
